# libgtkdateentry

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-0.0.2  Makefile.am  autogen.sh  config.h.in  configure.ac  libgtkdateentry.pc.in
docs/reference/: Makefile.am  gtkdateentry-decl-list.txt  gtkdateentry-decl.txt  gtkdateentry-docs.sgml  gtkdateentry-sections.txt  gtkdateentry-undocumented.txt  gtkdateentry-unused.txt  gtkdateentry.args  gtkdateentry.hierarchy  gtkdateentry.interfaces  gtkdateentry.prerequisites  gtkdateentry.types
docs/reference/tmpl/: gtkdateentry-unused.sgml  gtkdateentry.sgml
glade/: Makefile.am  gtkdateentry.xml
glade/icons/hicolor/: Makefile.am
glade/icons/hicolor/16x16/actions/: Makefile.am
glade/icons/hicolor/22x22/actions/: Makefile.am
src/: Makefile.am  gtkdateentry.c  gtkdateentry.h  gtkformwidgetdateentry.c  gtkformwidgetdateentry.h
tests/: Makefile.am  date_entry.c  plugin_gtkform.c  plugin_gtkform.form  plugin_gtkform.ui
