AM_CPPFLAGS = $(WARN_CFLAGS) \
              $(DISABLE_DEPRECATED_CFLAGS) \
              $(GTKDATEENTRY_CFLAGS)

LIBS = $(GTKDATEENTRY_LIBS)

lib_LTLIBRARIES = libgtkdateentry.la

libgtkdateentry_la_SOURCES = gtkdateentry.c

libgtkdateentry_la_LDFLAGS = -no-undefined

include_HEADERS = gtkdateentry.h
